--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,7 +9,7 @@
       <img src="<%= listing.image.url %>" class="card-img-top show-img" style="height: 20rem;" alt="..." />
       <p>Owned by <i><%= listing.owner.username %></i></p>
       <p><%= listing.description %></p>
-      <p>₹ <%= listing.price.toLocaleString("en-IN") %></p>
+      <p>₹ <%= listing.price.toLocaleString("en-IN") %>/night</p>
       <p><%= listing.location %></p>
       <p><%= listing.country %></p>
 
@@ -62,7 +62,7 @@
       <p><b>All Reviews</b></p>
       <div class="row">
         <% for(review of listing.reviews) { %>
-          <div class="card col-5 ms-3 mb-3 ">
+          <div class="card col-5 ms-3 mb-3 me-3 ">
             <div class="card-body">
               <h5 class="card-title">@<%= review.author.username %></h5>
                <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
