--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -19,6 +19,10 @@
             <div class="mb-3">
                 <button class="btn btn-success">SignUp</button>
             </div>
+            <div>
+                <p>Already have a account? <a href="/login">Login</a>
+                </p>
+            </div>
         </form>
     </div>
 </div>
