--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -15,6 +15,9 @@
             <div class="mb-3"> 
                 <button class="btn btn-success">Login</button>
             </div>
+            <div>
+                <p>Don't have a account? <a href="/signup">Signup</a></p>
+            </div>
         </form>
     </div>
 </div>
